add jsch to pom

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.2</version>
         </dependency>
+	<!-- https://mvnrepository.com/artifact/jsch/jsch -->
+	<dependency>
+    	    <groupId>jsch</groupId>
+            <artifactId>jsch</artifactId>
+    	    <version>0.1.29</version>
+	</dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
