--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                 <exec.mainClass>Tiko2020</exec.mainClass>
     </properties>
 
 </project>
